<resources>
    <string name="app_name">random_movie</string>
    <string name="content_description_start_icon">Registration icon</string>

    <!-- Strings used for registration page -->
    <string name="registration_page_name">Регистрация</string>
    <string name="registration_page_description">Если у вас еще нет аккаунта, пожалуйста, пройдите регистрацию</string>
    <string name="registration_page_text_layout_name">Имя или никнейм</string>
    <string name="registration_page_text_layout_email">Почта</string>
    <string name="registration_page_text_layout_password">Пароль</string>
    <string name="registration_page_text_layout_button_register">Зарегистрироваться</string>
    <string name="registration_page_text_layout_login_1">Уже с нами?</string>
    <string name="registration_page_text_layout_login_2">Пожалуйста, авторизуйтесь в приложении</string>
    <string name="registration_page_text_layout_button_login">Войти</string>

    <!-- Strings used for authorization page -->
    <string name="login_page_name">Войти</string>
    <string name="login_page_description">Чтобы начать использовать приложение, пожалуйста, авторизуйтесь.</string>
    <string name="login_page_text_layout_email">Почта</string>
    <string name="login_page_text_layout_password">Пароль</string>
    <string name="login_page_text_layout_button_login">Войти</string>
    <string name="login_page_text_layout_registered_1">Первый раз здесь?</string>
    <string name="login_page_text_layout_registered_2">Если у вас еще нет аккаунта, пожалуйста, пройдите регистрацию</string>
    <string name="login_page_text_layout_button_registration">Регистрация</string>
    <string name="title_activity_find_random_movie">FindRandomMovie</string>

    <!-- Strings used for filter find movie page -->
    <string name="card_1_fun_title">Смех и радость</string>
    <string name="card_2_sad_title">Грусть-тоска</string>
    <string name="card_3_anger_title">Гнев и ярость</string>
    <string name="card_4_scary_title">Страх и ужас</string>
    <string name="card_5_anxious_title">Тревога и испуг</string>
    <string name="card_6_love_title">Любовь-морковь</string>
    <string name="card_7_dreams_title">Мечты и грезы</string>
    <string name="card_8_cartoons_title">Бинго-бонго</string>
    <string name="main_title_mood">Настроение</string>
    <string name="description_mood">Выберите настроение, и мы подберем подходящий случайный фильм</string>

    <!-- Strings used for navigation bar -->
    <string name="random_movie_title">Случайный</string>
    <string name="liked_movies_title">Избранное</string>
    <string name="home_title">Профиль</string>
    <string name="with_friend_title">С другом</string>
    <string name="advice_title">Советы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for random movie -->
    <string name="random_title">Случайный фильм</string>

    <!-- Strings used for movie card -->
    <string name="country_title">Страна</string>
    <string name="year_title">Год</string>
    <string name="genre_title">Жанр</string>
    <string name="director_title">Режиссер</string>
    <string name="actors_title">В главных ролях</string>
    <string name="recommendation_button">Рекомендовать</string>
    <string name="delete_button">Удалить</string>
    <string name="filter_button">Настроить фильтры</string>
    <string name="recommend_button">Посоветовать</string>
    <string name="my_rating_title">Моя оценка</string>

    <!-- Strings used for liked movies -->
    <string name="liked_main_title">Избранное</string>

    <!-- Strings used for tabs -->
    <string name="tab_1">Буду смотреть</string>
    <string name="tab_2">Просмотрено</string>
s
    <!-- Strings used for edit profile -->
    <string name="title_edit">Редактирование\nпрофиля</string>
    <string name="button_edit">Редактировать</string>
    <string name="button_save">Сохранить</string>

    <!-- Strings used for profile -->
    <string name="button_exit">Выйти</string>

    <!-- Strings used for friends page -->
    <string name="friends_title">Друзья</string>
    <string name="friends_subtitle">Играйте с другими пользователями, чтобы совпадений было больше</string>
    <string name="friends_search_hint">Найти по имени</string>
    <string name="friends_back">Назад</string>
    <string name="friends_name">Василий</string>
    <string name="friends_match_amount">16 совпало</string>
    <string name="friends_avatar_desc">Аватар пользователя</string>
    <string name="friends_open_profile">Открыть профиль друга</string>

    <!-- Strings used for friend movie vote page -->
    <string name="friend_vote_step_prefix">Фильм</string>
    <string name="friend_vote_step_suffix">из 10</string>
    <string name="friend_vote_playing_with">Играем с пользователем</string>
    <string name="friend_vote_user_avatar">Аватар текущего пользователя</string>
    <string name="friend_vote_friend_avatar">Аватар друга</string>
    <string name="friend_vote_movie_poster">Постер фильма</string>
    <string name="friend_vote_add_to_favorites">Добавить в избранное</string>
    <string name="friend_vote_dislike">Не нравится</string>
    <string name="friend_vote_like">Нравится</string>

    <!-- Strings used for filters page -->
    <string name="filters_back">Назад</string>
    <string name="filters_title">Фильтры</string>
    <string name="filters_genre">Жанр</string>
    <string name="filters_genre_value">Все</string>
    <string name="filters_choose_genre">Выбрать жанр</string>
    <string name="filters_country">Страна</string>
    <string name="filters_country_hint">Введите</string>
    <string name="filters_year">Год</string>
    <string name="filters_rating">Рейтинг</string>
    <string name="filters_apply">Подобрать фильм</string>
    <string name="filters_reset">Сбросить все</string>

    <!-- Strings used for friend result page -->
    <string name="friend_result_title">Ваш результат</string>
    <string name="friend_result_matches_prefix">Совпадений:</string>
    <string name="friend_result_matches_suffix">из 10</string>
    <string name="friend_result_player_1">Первый пользователь</string>
    <string name="friend_result_player_2">Второй пользователь</string>

    <!-- Strings used for tips page -->
    <string name="tips_title">Советы</string>
    <string name="tips_subtitle">Рекомендации других пользователей</string>
    <string name="tips_movie_poster">Постер рекомендованного фильма</string>
    <string name="tips_open">Открыть фильм</string>
    <string name="tips_user_avatar">Аватар рекомендующего пользователя</string>

    <!-- Strings used for profile page -->
    <string name="profile_avatar">Аватар профиля</string>

    <!-- Strings used for profile page -->
    <string name="profile_movies">Фильмов</string>
    <string name="profile_played">Сыграно</string>
    <string name="profile_tips">Советов</string>
    <string name="profile_all_with_arrow">Все →</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>

    <!-- Strings used for invite dialog -->
    <string name="invite_dialog_title">Приглашение</string>
    <string name="invite_dialog_message">Пользователь приглашает вас выбрать фильм вместе</string>
    <string name="invite_dialog_accept">Согласиться</string>
    <string name="invite_dialog_decline">Отклонить</string>
</resources>


