<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/random_movie"
        android:title="@string/random_movie_title"
        android:icon="@drawable/movie_random"/>
    <item
        android:id="@+id/with_friend"
        android:title="@string/with_friend_title"
        android:icon="@drawable/with_friend"/>
    <item
        android:id="@+id/advice"
        android:title="@string/advice_title"
        android:icon="@drawable/advice_page"/>
    <item
        android:id="@+id/liked_movies"
        android:title="@string/liked_movies_title"
        android:icon="@drawable/liked_movies"/>
    <item
        android:id="@+id/home"
        android:title="@string/home_title"
        android:icon="@drawable/account_circle"/>
</menu>
