<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/login_page_name"
        app:layout_constraintBottom_toTopOf="@+id/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_page_description"
        android:textColor="@color/textColor_subtitles"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/login_email"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/login_page_text_layout_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/login_page_text_layout_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/login_page_text_layout_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:backgroundTint="@null"
        android:background="@drawable/button_gradient"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />


    <TextView
        android:id="@+id/RegistrationRedirectText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:text="@string/login_page_text_layout_registered_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/RegistrationRedirectText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/login_page_text_layout_registered_2"
        android:textColor="@color/textColor_subtitles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationRedirectText1" />

    <Button
        android:id="@+id/loginRedirectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingHorizontal="32dp"
        android:text="@string/login_page_text_layout_button_registration"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        style="?attr/gradientBorderButtonStyle"
        android:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistrationRedirectText2" />

</androidx.constraintlayout.widget.ConstraintLayout>